# ezansiedgeai-small

./: .gitignore  README.md
.github/: copilot-instructions.md
.github/agents/: ai-pipeline-engineer.md  android-ui-engineer.md  content-pack-engineer.md  edge-node-engineer.md  learner-data-engineer.md  project-architect.md  project-orchestrator.md  qa-test-engineer.md
.github/hooks/: ejs-hooks.json  log-prompt.sh  session-end.sh  session-start.sh  subagent-stop.sh
apps/learner-mobile/: .gitignore  README.md  gradle.properties  settings.gradle.kts
apps/learner-mobile/core/llama/src/main/cpp/: CMakeLists.txt  llama_jni.cpp
apps/school-edge-node/: README.md
content-packs/: .gitignore  maths-grade6-caps-all-terms-v1.0.pack  maths-grade6-caps-fractions-v0.1.pack
docs/: DEVICE-TEST-REPORT.md  DEVICE-VALIDATION-CHECKLIST.md  PROGRESS.md
docs/architecture/: deployment-modes.md  edge-device-architecture.md  phone-architecture.md  system-overview.md
docs/blog/: 2026-03-17-offline-ai-tutor-ezansiedgeai-ejs.markdown  2026-03-29-from-spikes-to-real-device-inference.markdown
docs/development/: ai-agent-instructions.md  backlog-v1.md  coding-principles.md  emulator-testing-runbook.md  sideload-testing-runbook.md
docs/product/: constraints.md  feature-gemma4-semantic-search.md  prd-v1.md  success-metrics.md  user-personas.md
docs/research/: gemma4-model-evaluation-and-semantic-search.md
ejs-docs/: session-lifecycle-patterns.md
ejs-docs/adr/: 0001-phone-first-architecture.md  (+11 more)
models/: .gitignore
scripts/: bootstrap-ejs.ps1  bootstrap-ejs.sh
(+203 files in other folders)
